--- a/src/components/customButton/customButton.scss
+++ b/src/components/customButton/customButton.scss
@@ -21,11 +21,23 @@
 		border: 1px solid black;
 	}
 
-	&.google-sign-in {
+	& .google-sign-in {
 		background-color: #4285f4;
 		color: white;
 		&:hover {
 			background-color: #357ae8;
 		}
+	}
+
+	& .inverted{
+		background-color: white;
+		color: black;
+		border: 1px solid black;
+		&:hover{
+			background-color: black;
+			color: white;			
+			border:none;
+		}
+
 	}
 }
