--- a/src/components/cart-dropdown/CartDropdowm.scss
+++ b/src/components/cart-dropdown/CartDropdowm.scss
@@ -1,7 +1,7 @@
 .cart-dropdown {
 	position: absolute;
 	width: 240px;
-	max-height: 340px;
+	height: 340px;
 	display: flex;
 	flex-direction: column;
 	padding: 20px;
@@ -11,11 +11,12 @@
 	right: 0;
 	z-index: 5;
 
-	.cart-item {
+	.cart-items {
 		height: 240px;
 		display: flex;
 		flex-direction: column;
-		overflow: scroll;
+
+		overflow: auto;
 	}
 	button {
 		margin-top: auto;
